# pycrc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: github-actions.yml
pycrc/: __init__.py  codegen.py  expr.py  symtable.py
src/: pycrc.py
src/pycrc/: __init__.py  algorithms.py  codegen.py  expr.py  main.py  models.py  opt.py  symtable.py
test/: check_files.sh  performance.sh  test.py  test_algorithms.py  test_cli.py  test_codegen.py
