[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycrc"
version = "0.11.0"
authors = [
  { name="Thomas Pircher", email="tehpeh-web@tty1.net" },
]
description = "A free, easy to use Cyclic Redundancy Check source code generator for C/C++"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata >= 4.0",
]

[project.urls]
"Homepage" = "https://pycrc.org"
"Bug Tracker" = "https://github.com/tpircher/pycrc/issues"

[project.scripts]
pycrc = "pycrc.main:main"
